# libmpv-client

./: Cargo.toml  README.md
.github/workflows/: rust.yml  rustdocs.yml
libmpv-client/: Cargo.toml
libmpv-client-sys/: Cargo.toml  build.rs  wrapper.h
libmpv-client-sys/src/: lib.rs  mpv_data.rs  mpv_funcs.rs  mpv_pfns.rs
libmpv-client/src/: error.rs  event.rs  format.rs  handle.rs  lib.rs  macros.rs  node.rs  property.rs  tests.rs  traits.rs  version.rs
libmpv-client/src/types/: basics.rs  byte_array.rs  mod.rs  node.rs  node_array.rs  node_map.rs  tests.rs  traits.rs
