[package]
name = "libmpv-client"
version = "0.2.0"
readme.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
name = "libmpv_client"

[dependencies]
libmpv-client-sys = { path = "../libmpv-client-sys" }

[target.'cfg(target_os = "windows")'.dependencies]
libmpv-client-sys = { path = "../libmpv-client-sys", features = ["dyn-sym"] }